# ADS1256Library

./: CMakeLists.txt  README.md
ads1256_library/: CMakeLists.txt
ads1256_library/inc/: ADS1256.h
ads1256_library/src/: ADS1256.cpp
include/: ADS1256.cpp  ADS1256.h
src/: main.cpp
